--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+11.06.02 VZ: added "Bounce" (a.k.a. redirect) command
 18.05.02 VZ: added a toolbar button to check for new mail
 13.05.02 VZ: added group reply/forwarding feature
 03.05.02 VZ: added highlighting of the URLs in the message headers
