--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,7 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
-01.07.02 VZ: added a SpamAssassin SPAM test
+01.07.02 NB: added a SpamAssassin SPAM test
 27.06.02 VZ: added an HTML SPAM test
 18.06.02 VZ: added additional filter tests for the SPAM messages
 12.06.02 VZ: fixes for working with read only folders
