implemented searching in multiple folders, it compiles and seems to work for single folder searches but dies horribly when searching in more than one folder for now

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.65 '???' ??? ??, 2002
 -------------------------------------------------------------------------------
 
+23.07.02 VZ: implemented "search in multiple folders" function
+17.07.02 VZ: limited virtual folder support for showing the search results
 01.07.02 NB: added a SpamAssassin SPAM test
 27.06.02 VZ: added an HTML SPAM test
 18.06.02 VZ: added additional filter tests for the SPAM messages
