--- a/CHANGES
+++ b/CHANGES
@@ -471,13 +471,13 @@ Hey, look, it compiles!
 People appearing in the second column of the change log:
 ===============================================================================
 
-KB:     Karsten Ballüeder
+KB:     Karsten Ballüder
 MC:     Michael A Chase
 MR:     Michele Ravani
 NB:     Nerijus Baliunas
 TF:     Thomas Finneid
 VS:     Vaclav Slavik
-VZ:     Vadim Zeitiln
+VZ:     Vadim Zeitlin
 XN:     Xavier Nodet
 
 Thank you all!
