--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,7 @@
       See at the end of file for the list of contributors (initials appearing
       in the second column of the changelog below).
 
-Release 0.65 '???' ??? ??, 2003
+Release 0.64.2 'Sparc' Feb 3, 2003 [semiofficial pre-release]
 -------------------------------------------------------------------------------
 
 19.01.03 VZ: created a "View" menu from where view filters can be toggled
