--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@
 Release 0.65 'Claire' ???, 2003
 -------------------------------
 
+08.03.03 VZ: added (START)TLS support for POP/IMAP/SMTP/NNTP
 16.02.03 VZ: automatically retrieve PGP public keys from keyserver
 15.02.03 VZ: added find dialog to the raw text viewer
 14.02.03 NB: don't move focus to the next message when user cancelled copying/moving
